@@ -13,9 +13,10 @@ endif
 bin_PROGRAMS = $(xine_ui)
 EXTRA_PROGRAMS = session_ctrl kbindings_man
 
-kbindings_man_LDADD = @XINE_LIBS@ $(top_builddir)/src/common/libcommon.la \
+kbindings_man_LDADD = @XINE_LIBS@ 
 	     $(top_builddir)/src/xitk/xine-toolkit/libxitk.la \
 	     $(top_builddir)/src/xitk/oxine/liboxine.la \
+	     $(top_builddir)/src/common/libcommon.la \
 	     $(X_PRE_LIBS) @XINE_LIBS@ $(LIRC_LIBS) $(DYNAMIC_LD_LIBS) \
 	     $(X_LIBS) $(XTEST_LIBS) $(CURL_LIBS) $(NVTVSIMPLE_LIBS) \
 	     -lX11 -lm
@@ -55,14 +56,15 @@ xine_SOURCES = \
 	videowin.c \
 	viewlog.c
 
-xine_DEPENDENCIES = $(top_builddir)/src/common/libcommon.la \
-                    $(top_builddir)/src/xitk/xine-toolkit/libxitk.la \
-                    $(top_builddir)/src/xitk/oxine/liboxine.la
+xine_DEPENDENCIES = $(top_builddir)/src/xitk/xine-toolkit/libxitk.la \
+                    $(top_builddir)/src/xitk/oxine/liboxine.la \
+                    $(top_builddir)/src/common/libcommon.la
 
 # double @XINE_LIBS@ to ensure correct libpath (libtool may add -L...)
-xine_LDADD = @XINE_LIBS@ $(top_builddir)/src/common/libcommon.la \
+xine_LDADD = @XINE_LIBS@ \
 	     $(top_builddir)/src/xitk/xine-toolkit/libxitk.la \
 	     $(top_builddir)/src/xitk/oxine/liboxine.la \
+	     $(top_builddir)/src/common/libcommon.la \
 	     $(X_PRE_LIBS) @XINE_LIBS@ $(LIRC_LIBS) $(DYNAMIC_LD_LIBS) \
 	     $(X_LIBS) $(XTEST_LIBS) $(CURL_LIBS) $(NVTVSIMPLE_LIBS) \
 	     -lX11 -lm $(DBG_LIBS)
